Finish Popular Movie stage 2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
         android:id="@+id/rv_movies"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/rv_movies_padding"
         android:clipToPadding="false"
         android:scrollbars="vertical"/>
 
