--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -1,85 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorPrimaryDark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    tools:context="com.viv.gunchung.ngawamovie.DetailMovieActivity">
 
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <RelativeLayout
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/detail_movie_padding">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <ImageView
-                android:id="@+id/iv_detail_movies_poster"
-                android:layout_width="@dimen/detail_movie_poster_width"
-                android:layout_height="@dimen/detail_movie_poster_height"
-                android:paddingRight="@dimen/detail_movie_poster_padding_right"
-                android:paddingLeft="@dimen/detail_movie_poster_padding_left"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:scaleType="fitCenter"/>
+            <FrameLayout
+                android:id="@+id/fl_movies_backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_detail_movies_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/iv_detail_movies_poster"
-                android:paddingTop="@dimen/detail_movie_padding"
-                android:paddingBottom="@dimen/detail_movie_inner_padding"
-                android:textSize="@dimen/detail_movie_title_size"
-                android:textColor="@color/colorTextPrimary"
-                tools:text="Fifty Shades Darker" />
+                <ImageView
+                    android:id="@+id/iv_detail_movies_backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="230dp"
+                    android:scaleType="fitXY"
+                    tools:src="@drawable/placeholder_backdrop"/>
 
-            <TextView
-                android:id="@+id/tv_release_year"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_detail_movies_title"
-                android:layout_toRightOf="@id/iv_detail_movies_poster"
-                android:paddingBottom="@dimen/detail_movie_inner_padding"
-                android:textColor="@color/colorTextDarker"
-                android:textSize="@dimen/detail_movie_year_size"
-                tools:text="2017"/>
+                <ProgressBar
+                    android:id="@+id/pb_video_loading"
+                    android:layout_width="@dimen/pb_loading_width"
+                    android:layout_height="@dimen/pb_loading_height"
+                    android:layout_gravity="center"
+                    android:visibility="visible" />
 
-            <TextView
-                android:id="@+id/tv_detail_movies_rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_release_year"
-                android:layout_toRightOf="@id/iv_detail_movies_poster"
-                android:textSize="@dimen/detail_movie_rating_size"
-                android:textColor="@color/colorAccent"
-                android:drawableLeft="@drawable/ic_star_black_14dp"
-                android:drawablePadding="2dp"
-                tools:text="10"/>
+                <ImageView
+                    android:id="@+id/iv_detail_movies_play"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_play_circle_filled_black_48dp"
+                    android:layout_gravity="center"
+                    android:onClick="onClickAddToFavorite"
+                    android:visibility="invisible" />
 
-            <TextView
-                android:id="@+id/tv_overview_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/iv_detail_movies_poster"
-                android:paddingTop="@dimen/detail_movie_padding"
-                android:paddingBottom="@dimen/detail_movie_inner_padding"
-                android:text="@string/tv_overview_label"
-                android:textSize="@dimen/tv_overview_label_size"
-                android:textColor="@color/colorAccent" />
+            </FrameLayout>
 
-            <TextView
-                android:id="@+id/tv_overview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_overview_label"
-                android:textColor="@color/colorTextDark"
-                android:textSize="@dimen/tv_overview_size"
-                android:lineSpacingExtra="@dimen/tv_overview_line_spacing_size"
-                tools:text='A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground \"fight clubs\" forming in every town, until an eccentric gets in the way and ignites an out-of-control spiral toward oblivion.'/>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/detail_movies_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-        </RelativeLayout>
-    </ScrollView>
-</LinearLayout>
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/nsv_movies_detail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <include layout="@layout/content_detail_movie" />
+
+    </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="@dimen/fab_margin"
+        app:layout_anchor="@id/nsv_movies_detail"
+        app:layout_anchorGravity="bottom|right|end"
+        app:srcCompat="@drawable/ic_favorite_black_24dp" />
+
+</android.support.design.widget.CoordinatorLayout>
