--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -14,7 +15,7 @@
         android:elevation="@dimen/card_elevation"
         card_view:cardBackgroundColor="@color/colorPrimary"
         card_view:cardCornerRadius="@dimen/card_corner_radius">
-
+.
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -25,7 +26,7 @@
                 android:layout_height="@dimen/movie_poster_height"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:scaleType="fitCenter" />
+                android:scaleType="fitXY" />
 
             <TextView
                 android:id="@+id/tv_movies_title"
@@ -36,7 +37,8 @@
                 android:paddingLeft="@dimen/card_padding"
                 android:paddingRight="@dimen/card_padding"
                 android:textColor="@color/colorTextPrimary"
-                android:textSize="@dimen/movie_title_size" />
+                android:textSize="@dimen/movie_title_size"
+                tools:text="Spider-Man: HomeComing"/>
 
             <TextView
                 android:id="@+id/tv_movies_rating"
@@ -49,7 +51,8 @@
                 android:textSize="@dimen/movie_rating_size"
                 android:textColor="@color/colorAccent"
                 android:drawableRight="@drawable/ic_star_black_14dp"
-                android:drawablePadding="2dp" />
+                android:drawablePadding="2dp"
+                tools:text="7.4"/>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
