--- a/app/src/main/res/menu/menu_sort.xml
+++ b/app/src/main/res/menu/menu_sort.xml
@@ -17,4 +17,10 @@
         android:title="@string/action_top_rated"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_favorite"
+        android:orderInCategory="102"
+        android:title="@string/action_favorite"
+        app:showAsAction="never" />
+
 </menu>
