--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="rv_movies_padding">8dp</dimen>
+
     <dimen name="tv_error_message_text_size">20sp</dimen>
     <dimen name="tv_error_message_padding">16dp</dimen>
 
@@ -9,7 +13,7 @@
     <dimen name="pb_loading_width">52dp</dimen>
 
     <!-- list item dimen -->
-    <dimen name="card_margin">5dp</dimen>
+    <dimen name="card_margin">8dp</dimen>
     <dimen name="card_elevation">3dp</dimen>
     <dimen name="card_corner_radius">0dp</dimen>
 
@@ -25,10 +29,10 @@
     <dimen name="detail_movie_padding">16dp</dimen>
     <dimen name="detail_movie_inner_padding">5dp</dimen>
 
-    <dimen name="detail_movie_poster_width">110dp</dimen>
-    <dimen name="detail_movie_poster_height">140dp</dimen>
-    <dimen name="detail_movie_poster_padding_left">0dp</dimen>
-    <dimen name="detail_movie_poster_padding_right">15dp</dimen>
+    <dimen name="detail_movie_poster_width">165dp</dimen>
+    <dimen name="detail_movie_poster_height">220dp</dimen>
+    <dimen name="detail_movie_poster_padding_left">16dp</dimen>
+    <dimen name="detail_movie_poster_padding_right">16dp</dimen>
 
     <dimen name="detail_movie_title_size">18sp</dimen>
     <dimen name="detail_movie_year_size">12sp</dimen>
